--- a/css/answer.css
+++ b/css/answer.css
@@ -120,7 +120,7 @@ div.content-infomation div.left-side form input{
 	width: 97%;
 	padding: 10px 5px;
 	border-radius: 5px;
-	border: 1px solid blue;
+	border: 1px solid #3e8e41;
 	margin-bottom: 15px;
 }
 
@@ -129,15 +129,15 @@ div.content-infomation div.left-side form textarea{
 	border-radius: 5px;
 	height: 200px;
 	padding: 10px 5px;
-	border: 1px solid blue;
+	border: 1px solid #3e8e41;
 }
 
 div.content-infomation div.left-side form button{
 	margin-top: 10px;
 	padding: 8px 10px;
 	border-radius: 10px;
-	border: 1px solid blue;
-	background-color: blue;
+	border: 1px solid #3e8e41;
+	background-color: #3f2d46;
 	color: white;
 	margin-bottom: 10px;
 }
@@ -180,7 +180,8 @@ div.content-infomation div.right-side{
 
 div.content-infomation div.right-side h4{
 	text-transform: uppercase;
-	margin-left: 17px;
+	margin-bottom:6px;
+	margin-left: 10px;
 }
 
 div.content-infomation div.right-side .qns-cont .cont{
@@ -190,8 +191,8 @@ div.content-infomation div.right-side .qns-cont .cont{
 }
 
 div.content-infomation div.right-side .qns-cont .cont img{
-	width: 50px;
-	height: 50px;
+	width: 40px;
+	height: 40px;
 	position: relative;
 	float: left;
 }
@@ -208,8 +209,11 @@ h2.ans-title{
 }
 
 div.answer-container{
+	display: none;
 	background-color: #efefef;
 	padding: 15px;
+	font-size: 18px;
+	
 }
 
 div.answer-container div.ans{
