--- a/css/login.css
+++ b/css/login.css
@@ -464,7 +464,7 @@ input:focus {
   height: 200px;
   overflow: hidden;
   transition: all 300ms ease;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   position: relative;
 }
 
@@ -488,7 +488,7 @@ input:focus {
 
 .meetup-card .title {
   font-weight: normal;
-  font-size: 20px;
+  font-size: 17px;
   color: #3a3a3a;
 }
 
@@ -504,7 +504,7 @@ input:focus {
 .question-count {
   position: absolute;
   right: 10px;
-  bottom: 10px;
+  top: 4px;
   background-color: #fff;
   padding: 7px 15px;
   border-radius: 3px;
@@ -522,7 +522,7 @@ input:focus {
   position: absolute;
   bottom: -50px;
   opacity: 0;
-  left: 35%;
+  left: 30%;
   font-size: 14px;
   transition: all 300ms ease-in-out;
   border-radius: 3px;
@@ -634,7 +634,7 @@ input:focus {
   }
 
   .meetup-card .info {
-    padding: 0px 20px 30px 20px;
+    padding: 0px 5px 10px 5px;
     padding-top: 0;
   }
 
@@ -741,13 +741,15 @@ input:focus {
 	margin-top: 45px;
 	margin-left: 0px;
 	margin-right: 0px;
-	float:left;
+  float:left;
 	text-align: center;
 }
+
 .in-answer1{
 	background-color:#048AF8;
 	display: inline-block;
-	width:33.3%;
+  width:33.3%;
+  font-size: 20px;
 	float: left;
 	height: 100%;
 	padding-right:0px;
@@ -757,13 +759,15 @@ input:focus {
 	display: inline-block;
 	float:left;
 	width:33.3%;
-	height: 100%;
+  height: 100%;
+  font-size: 20px;
 }
 .in-answer3{
 	background-color:#38DFA3;
 	display: inline-block;
 	width:33.3%;
-	float:left;
+  float:left;
+  font-size: 20px;
 	height: 100%;
 }
 .add-col h1{
@@ -823,8 +827,8 @@ margin-bottom: 20px;
 	font-size: 2em;
 	font-weight: bold;
 	padding: 10px;
-	border-top: 1px solid green;
-	border-bottom: 1px solid green;
+	border-top: 1px solid #1871ba;
+	border-bottom: 1px solid #1871ba;
 	/* margin: 40px 0px; */
 }
 .q-text {
@@ -872,7 +876,7 @@ margin-bottom: 20px;
 	/* height: 74px; */
 }
 .mail-row {
-	border-top: 1px solid darkgreen; /* PB Blue */
+	border-top: 1px solid #319FF9; /* PB Blue */
 	height: 130px;
 	overflow: hidden;
 	/* letter-spacing: -1px; */
@@ -1011,13 +1015,150 @@ margin-bottom: 20px;
   top:100px;
   left:40%;
   right: 40%;
-  color:darkgreen;
+  color:#319FF9;
   font-weight: 750;
   font-style: italic;
 }
+@keyframes zoom-in {
+  0%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.05);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+.showZoom:hover {
+  animation-name:  zoom-in;
+  animation-duration: 1s;
+}
+/*****start search*****/
+.container-dashbt{
+  width: 80%;
+  margin-left:auto;
+  margin-right: auto;
+  overflow: hidden;
 
+}
+/* Add a black background color to the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #0f1721;
+  width:100%;
+  margin-left:auto;
+  margin-right: auto;
+}
 
+/* Style the links inside the navigation bar */
+.topnav .b {
+  float: right;
+  display: block;
+  text-align: center;
+  margin:15px 10px 15px 0px;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  background: rgba(255,255,255,.2)!important;
+  color: #fff!important;
+  box-shadow: inset -1px 1px 2px 0 rgba(0,0,0,.54);
+  font-weight: 500;
+}
+.topnav .c {
+  float: right;
+  display: block;
+  text-align: center;
+  margin:15px 0px 15px 0px;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  background: rgba(255,255,255,.2)!important;
+  color: #fff!important;
+  box-shadow: inset -1px 1px 2px 0 rgba(0,0,0,.84);
+  font-weight: 500;
+}
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
+/* Style the "active" element to highlight the current page */
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
+
+/* Style the search box inside the navigation bar */
+.topnav input[type=text] {
+  float: left;
+  padding: 6px;
+  border: none;
+  margin-left: 10px;
+  margin-top: 15px;
+  margin-bottom:15px; 
+  margin-right: 16px;
+  font-size: 17px;
+}
+
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
+}
+
+/****start static menu*****/
+.ul {
+  width: 20%;
+  list-style-type: none; /* Remove bullets */
+  padding: 0; /* Remove padding */
+  margin:40px 0px 0px 0px; /* Remove margins */
+  float:right;
+
+}
+
+.ul li {
+  border: 1px solid #ddd; /* Add a thin border to each list item */
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #fff; /* Add a grey background color */
+  padding: 12px; /* Add some padding */
+  font-size: 13px;
+  font-weight: 500;
+}
+.ul li:hover{
+  background-color: #f6f6f6;
+  cursor: pointer;
+}
+.activity{
+  border-left:4px solid #319FF9;
+  background-color:#eaeef2 ;
+  color: #1871ba;
+}
+.display-mt{
+  margin-top:40px;
+  display:inline-block;
+  width:78%;
+  background-color: #ffffff;
+  float-left;
+  overflow: hidden;
+}
+.date-btn{
+  width:20%;
+  float: right;
+  position: absolute;
+  right: 5.5%;
+  top:100%;
+}
 
 
 
