--- a/css/login.css
+++ b/css/login.css
@@ -10,6 +10,7 @@
 .content .auth .card,
 .content .auth-signup .card{
   max-width: 650px;
+  margin-top:7%;
   min-height: 200px;
   background-color: #FFFFFF;
   box-shadow:  1px 2px 4px #c4c4c4;
