--- a/css/modal.css
+++ b/css/modal.css
@@ -209,7 +209,7 @@ background-color:#1871ba;
 /****sign in form****/
 .containerlogin {
   width:60%;
-  margin:7% auto;
+  margin:15% auto 10% auto;
   border-radius: 5px;
   background-color: #d9ebf9;
   padding: 20px 0 30px 0;
@@ -227,7 +227,9 @@ input,.submit-btn,
   display: inline-block;
   font-size: 17px;
   line-height: 20px;
-  text-decoration: none; /* remove underline from anchors */
+  text-decoration: none;
+  overflow:hidden;
+  /* remove underline from anchors */
 }
 
 .btn:hover {
@@ -237,6 +239,7 @@ input,.submit-btn,
 /* add appropriate colors to fb, twitter and google buttons */
 .fb {
   background-color: #3B5998;
+  
   color: white;
 }
 
