--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,11 @@ body {
 	width: 100%;
 	max-height: 80px;
 	padding: 5px;
-	position: relative;
+	position: fixed;
+	top: 0;
 	background-color: #319FF9;
 	overflow: hidden;
+	z-index: 10000000;
 	
 }
 #questioner{
@@ -224,6 +226,7 @@ text-decoration: none;
 	width:100%;
 	height: 80px;
 	margin-bottom: 0px;
+	
 
 }
 .footer-container{
@@ -440,6 +443,7 @@ form.example input[type=text] {
 	 padding:0px;
 	 width:100%;
 	 height: 200px;
+	 margin-top: 80px;
  }
  .back-image{
 	 background:url(../images/wave-photography-dark-2.jpg);
@@ -541,7 +545,8 @@ form.example input[type=text] {
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 5px;
+	margin-top: 80px;
+	margin-bottom:10px;
 }
 /* Clear floats after the columns */
 .row2:after {
